<resources>
    <string name="app_name">HomeSweetHome</string>
    <string name="prompt_email">Enter your email address here.</string>
    <string name="prompt_password">Enter your password here.</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Don\'t have an account? Create one!</string>
    <string name="welcome_word">🎉 Welcome! 🎉</string>
    <string name="nav_home">🏙         Home</string>
    <string name="header_text">Replace this with sth else</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="grid_image">Grid Image</string>
    <string name="upload_page_image">Photo*</string>
    <string name="edit_page_image">Photo</string>
    <string name="upload_page_image_button">Click to upload photos</string>
    <string name="upload_page_video_button">Click to upload a video</string>
    <string name="upload_page_title">Title</string>
    <string name="upload_page_date">Date to remember</string>
    <string name="upload_page_text_description">Enter description</string>
    <string name="upload_page_video">Video</string>
    <string name="save">SAVE</string>

    <string name="register_password">Password</string>
    <string name="register_cfn_password">Confirm password</string>
    <string name="register_email">Email</string>
    <string name="register">register</string>
    <string name="return_to_login">login</string>
    <string name="forget_password">Forget password?</string>
    <string name="invalid_register_password">Password must be 6-20 characters or digits only</string>
    <string name="invalid_register_cnf_password">Please enter the same password as above</string>>
    <string name="invalid_register_email">Not a valid email address</string>
    <string name="custom">Custom</string>
    <string name="register_success">Success!</string>
    <string name="register_fail">Fail!</string>
    <string name="button_return">Return</string>
    <string name="retrieve_password">Please Enter the email address you have registered with:</string>
    <string name="button_retrieve">Email Validation</string>
    <string name="return_to_register">Register</string>
    <string name="title_activity_email_validation">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="return_">Return"</string>
    <string name="email_validation">Send an email for you to validate</string>
    <string name="reset_password">Reset Password</string>
    <string name="nav_search">🔍          Search</string>
    <string name="search_background">Type a word to search!\nSplit word with space to search on multiple key words!</string>
    <string name="nav_timeline">📽         Timeline</string>
    <string name="date_year_hint"><i> YYYY</i></string>
    <string name="date_month_hint"><i> MM</i></string>
    <string name="date_day_hint"><i> DD</i></string>
    <string name="date_seperator"><i>/</i></string>
    <string name="introduction"><i>Personalized Signature</i></string>

    <string name="date_of_birth"><i>Date of birth*:</i></string>
    <string name="dark_mode_switch">Click to switch to dark mode 🌚</string>
    <string name="sex"><i>Male/Female</i></string>
    <string name="gender"><i>Gender*:</i></string>
    <string name="self_intro_text"><i>Personalized Signature:</i></string>
    <string name="individual_info"><i>👴Personal Information👵</i></string>
    <string name="name"><i>Name*:</i></string>
    <string name="name_attribute"><i>(Could be your nickname, 1-50 charaters)</i></string>
    <string name="intro_attribute"><i>(0-100 characters)</i></string>
    <string name="upload_head_portrait_button"><i>Click to upload portrait</i></string>
    <string name="finish"><i>Finish</i></string>
    <string name="head_portrait_text"><i>Portrait: </i></string>
    <string name="logout"><i>logout</i></string>





</resources>
