<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/add_page_title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_page_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_frame"
            android:singleLine="true" />

        <TextView
            android:id="@+id/add_page_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload_page_date"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_date_year"
                android:layout_width="106dp"
                android:layout_height="50dp"
                android:background="@drawable/input_frame"
                android:inputType="date"
                android:singleLine="true"
                android:hint="@string/date_year_hint"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/date_seperator"
                android:textSize="30sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edit_date_month"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:background="@drawable/input_frame"
                android:inputType="date"
                android:singleLine="true"
                android:hint="@string/date_month_hint"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/date_seperator"
                android:textSize="30sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edit_date_day"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:background="@drawable/input_frame"
                android:inputType="date"
                android:singleLine="true"
                android:hint="@string/date_day_hint"
                android:textAlignment="viewStart"/>

        </LinearLayout>

        <TextView
            android:id="@+id/add_page_photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload_page_image"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <include
                layout="@layout/home_page"
                android:layout_height="200dp"
                android:layout_width="match_parent"/>

            <TextView
                android:id="@+id/recyclerview_frame"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/input_frame"/>

        </RelativeLayout>

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/upload_page_image_button"
            android:background="@drawable/upload_button_pressed"/>

        <TextView
            android:id="@+id/add_page_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload_page_text_description"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_desc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/input_frame"
            android:gravity="top|start"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/add_page_video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload_page_video"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/add_page_video"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="invisible"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/add_page_video_background"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/input_frame"/>

        </RelativeLayout>

        <Button
            android:id="@+id/upload_video_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/upload_page_video_button"
            android:background="@drawable/upload_button_pressed"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:text="@string/save"
            android:background="@drawable/login_button_pressed" />
    </LinearLayout>

</ScrollView>