<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UI.register.RegisterActivity">




    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/editTextColor"

        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/editTextColor"
        android:layout_marginTop="36dp"

        android:hint="@string/register_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />


    <EditText
        android:id="@+id/register_cfn_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColor="@color/editTextColor"
        android:autofillHints="@string/register_cfn_password"
        android:hint="@string/register_cfn_password"
        android:imeActionLabel="@string/register_cfn_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />



    <Button
        android:id="@+id/button_register"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:background="#eaf77f"
        android:layout_marginTop="55dp"

        android:enabled="false"
        android:text="@string/register"
        android:textColor="#5D4037"
        android:textSize="30sp"
        android:textStyle="bold" />



</LinearLayout>